syntax = "proto3";

option csharp_namespace = "Pars.Extensions.SyncMq";

package syncmq;

//import "google/protobuf/empty.proto";
//import "google/protobuf/any.proto";

service SyncMq {
  rpc SendMessage (stream MessageBroker) returns (stream Result);
  rpc GetMessages (stream Request) returns (stream MessageBroker);
}

message MessageBroker {
    string  message_id = 1;
    string key = 2;
    string topic = 3;
    bytes data = 4;
    map<string, bytes> headers = 5;
    bool next = 6;
}

message Result {
    string message_id = 1;
    string key = 2;
    string topic = 3;  
    string error = 4;
}

message Request {
    string topic = 1;        
    string subscriber = 2;    
    string scope = 3;
    bool commit = 4;
}